<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Pract1_ASM_Alvaro_Joan</string>
    <string name="patinfly">PATINFLY</string>
    <string name="registrar_se">Registrar-se</string>
    <string name="iniciar_sessi">Iniciar Sessió</string>
    <string name="Registre">Registrat a Patinfly per gaudir dels nostres serveis!</string>
    <string name="Nom">NOM:</string>
    <string name="hint1">Introduir nom</string>
    <string name="Cognoms">COGNOMS:</string>
    <string name="DNI">DNI:</string>
    <string name="Telefon">TELÈFON:</string>
    <string name="Correu">CORREU ELECTRÒNIC:</string>
    <string name="Contrasenya">CONTRASENYA:</string>
    <string name="RepContrasenya">REPETEIX LA CONTRASENYA:</string>
    <string name="selecciona_un_patinete">SELECCIONA UN PATINET:</string>
    <string name="botoregistrar">REGISTRAR</string>
    <string name="button">Button</string>
    <string name="viatja_per_la_ciutat_de_la_manera_m_s_ecol_gica_i_r_pida">Viatja per la ciutat de la manera més ecològica i ràpida</string>
    <string name="lloga_el_teu_patinet_en_un_instant">Lloga el teu patinet en un instant</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navegacio">NavegacioActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_Patinets">Patinets</string>
    <string name="menu_Perfil">Perfil</string>
    <string name="menu_Historial">Historial</string>
    <string name="menu_preferencias">Preferencies</string>
    <string name="cognoms">Cognoms</string>
    <string name="xxxxxxxxx">xxxxxxxxx</string>
    <string name="ejemplo_gmail_com">ejemplo@gmail.com</string>
    <string name="nombre">Nombre</string>

    <string name="contrasenya">Contrasenya</string>
    <string name="repeteix_contrasenya">Repeteix contrasenya</string>
    <string name="Preferencias" />
    <string name="contrase_a">Contraseña</string>
    <string name="dni">DNI</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="hint_passw">*************</string>
    <string name="todo">TODO</string>
    <string name="dades">Dades</string>
    <string name="alquilar">Llogar</string>
    <string name="informacio_sobre_el_patinet_seleccionat">Informacio sobre el patinet seleccionat:</string>
    <string name="latitud">Latitud:</string>
    <string name="longitud">Longitud:</string>
    <string name="identificador_del_patinet">Identificador del patinet:</string>
    <string name="nivell_de_bateria">Nivell de bateria:</string>
    <string name="km_recorreguts">Km recorreguts:</string>
    <string name="data_del_ultim_manteniment">Data del ultim manteniment:</string>
    <string name="estat">Estat:</string>
    <string name="txtejemplo">Ejemplo</string>
    <string name="Preferencies">Preferències</string>
    <string name="enrere">Enrere</string>
    <string name="historial">Historial</string>
    <string name="logo">logo</string>
    <string name="ayuda1">ayuda1</string>
    <string name="imagen">imagen</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="saltar">SALTAR</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="inciar">iniciar</string>
    <string name="benvingut">benvingut</string>
    <string name="Benvingut">Benvingut!!!</string>
    <string name="error">DNI o contrasenya incorrecta</string>
    <string name="userdb">DatosUser</string>
    <string name="scooterdb">datosScooter</string>
    <string name="PatinetLlogat">HAS LLOGAT EL PATINET CORRECTAMENT! JA POTS COMENÇAR A UTILITZAR-LO</string>
</resources>