<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_patinets"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_Patinets" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_Perfil" />
        <item
            android:id="@+id/nav_historial"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_Historial" />
        <item
            android:id="@+id/nav_preferencias"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_preferencias" />
    </group>
</menu>