<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_patinetes">

    <fragment
        android:id="@+id/nav_patinetes"
        android:name="cat.urv.deim.asm.pract1_asm_alvaro_joan.ui.patinetes.PatinetsFragment"
        android:label="@string/menu_Patinets">

    </fragment>

    <fragment
        android:id="@+id/nav_historial"
        android:name="cat.urv.deim.asm.pract1_asm_alvaro_joan.ui.historial.HistorialFragment"
        android:label="@string/menu_Historial">

    </fragment>
    <fragment
        android:id="@+id/nav_perfil"
        android:name="cat.urv.deim.asm.pract1_asm_alvaro_joan.ui.perfil.PerfilFragment"
        android:label="@string/menu_Perfil" />
    <fragment
        android:id="@+id/nav_preferencias"
        android:name="cat.urv.deim.asm.pract1_asm_alvaro_joan.ui.preferencias.PreferenciasFragment"
        android:label="@string/menu_preferencias" />
</navigation>