<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.perfil.PerfilFragment"
    app:menu="@menu/navegacio">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".ui.historial.HistorialFragment">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="180dp"
            android:layout_height="128dp"
            android:layout_marginStart="115dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="116dp"
            android:layout_marginBottom="6dp"
            android:src="@drawable/logo75"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_slideshow"
            android:layout_width="272dp"
            android:layout_height="83dp"
            android:layout_marginStart="69dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="70dp"
            android:gravity="center"
            android:text="Perfil"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_light"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="362dp"
            android:layout_height="409dp"
            android:layout_marginStart="44dp"
            android:layout_marginTop="39dp"
            android:layout_marginEnd="38dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_slideshow">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="160dp"
                android:layout_height="401dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="6dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    style="@style/registro"
                    android:text="@string/Nom" />

                <TextView
                    android:id="@+id/textView5"
                    style="@style/registro"
                    android:text="@string/Cognoms" />

                <TextView
                    android:id="@+id/textView"
                    style="@style/registro"
                    android:layout_height="56dp"
                    android:text="@string/DNI" />

                <TextView
                    android:id="@+id/textView2"
                    style="@style/registro"
                    android:layout_height="56dp"
                    android:text="@string/Correu" />

                <TextView
                    android:id="@+id/textView6"
                    style="@style/registro"
                    android:text="@string/Telefon" />

                <TextView
                    android:id="@+id/textView7"
                    style="@style/registro"
                    android:text="@string/km_recorreguts" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="401dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="11dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nameUserR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/nombre"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColor="#090909"
                    android:textColorHint="#757575" />

                <TextView
                    android:id="@+id/cognomsUserR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/cognoms"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColor="#090909"
                    android:textColorHint="#757575" />

                <TextView
                    android:id="@+id/dniUserR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/dni"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColor="#090909"
                    android:textColorHint="#757575" />

                <TextView
                    android:id="@+id/mailUserR"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/ejemplo_gmail_com"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColor="#090909"
                    android:textColorHint="#757575" />

                <TextView
                    android:id="@+id/telUserR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/xxxxxxxxx"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColor="#090909"
                    android:textColorHint="#757575" />

                <TextView
                    android:id="@+id/kmUserR"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/km_recorreguts"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:textColor="#090909"
                    android:textColorHint="#757575" />



            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>