<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="850dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".RegistreActivity">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="176dp"
            android:layout_height="147dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="21dp"
            android:contentDescription="@string/todo"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo50" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="239dp"
            android:layout_height="73dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="11dp"
            android:gravity="center"
            android:text="@string/informacio_sobre_el_patinet_seleccionat"
            android:textAlignment="center"
            android:textColor="#C51313"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <Button
            android:id="@+id/enrere"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="54dp"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="36dp"
            android:backgroundTint="#ffcc0000"
            android:gravity="center"
            android:text="@string/enrere"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/alquilar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

        <Button
            android:id="@+id/alquilar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="65dp"
            android:layout_marginBottom="36dp"
            android:backgroundTint="#ffcc0000"
            android:text="@string/alquilar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/enrere" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="378dp"
            android:layout_height="266dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="11dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="192.5dp"
                android:layout_height="336dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="6dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView13"
                    style="@style/registro"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:gravity="center"
                    android:text="@string/longitud"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView14"
                    style="@style/registro"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:gravity="center"
                    android:text="@string/latitud"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView15"
                    style="@style/registro"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:gravity="center"
                    android:text="@string/nivell_de_bateria"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView17"
                    style="@style/registro"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:gravity="center"
                    android:text="@string/estat"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="336dp"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="11dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView19"
                    style="@style/registro"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:gravity="center"
                    android:text="@string/txtejemplo"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView20"
                    style="@style/registro"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:gravity="center"
                    android:text="@string/txtejemplo"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView21"
                    style="@style/registro"
                    android:layout_width="match_parent"
                    android:layout_height="66dp"
                    android:gravity="center"
                    android:text="@string/txtejemplo"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView23"
                    style="@style/registro"
                    android:layout_width="196dp"
                    android:layout_height="66dp"
                    android:gravity="center"
                    android:text="@string/txtejemplo"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="346dp"
            android:layout_height="126dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="13dp"
            android:layout_marginBottom="32dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/alquilar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <TextView
                android:id="@+id/textView16"
                style="@style/registro"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:gravity="center"
                android:text="@string/data_del_ultim_manteniment"
                android:textColor="@color/black"
                android:textSize="24sp"
                tools:layout_editor_absoluteX="-173dp"
                tools:layout_editor_absoluteY="747dp" />

            <TextView
                android:id="@+id/textView24"
                style="@style/registro"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center"
                android:text="@string/txtejemplo"
                android:textColor="@color/black"
                android:textSize="24sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>