<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AyudaActivity1">


    <TextView
        android:id="@+id/descripcion"
        android:layout_width="380dp"
        android:layout_height="91dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:text="@string/lloga_el_teu_patinet_en_un_instant"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.671" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/siguiente"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="98dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:text="@string/siguiente"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/saltar"
        app:layout_constraintTop_toBottomOf="@+id/descripcion" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saltar"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="98dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="64dp"
        android:text="@string/saltar"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/siguiente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descripcion" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="338dp"
        android:layout_height="292dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/ayuda1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.314"
        app:srcCompat="@drawable/ayuda1" />


</androidx.constraintlayout.widget.ConstraintLayout>