<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AyudaActivity3">

    <ImageView
        android:id="@+id/imageview1"
        android:layout_width="265dp"
        android:layout_height="264dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="78dp"
        android:contentDescription="@string/imagen"
        app:layout_constraintBottom_toTopOf="@+id/descripcion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/aydua3" />

    <TextView
        android:id="@+id/descripcion"
        android:layout_width="380dp"
        android:layout_height="91dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="152dp"
        android:gravity="center"
        android:text="@string/viatja_per_la_ciutat_de_la_manera_m_s_ecol_gica_i_r_pida"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageview1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/siguiente"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:text="@string/siguiente"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/saltar"
        app:layout_constraintTop_toBottomOf="@+id/descripcion" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saltar"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="64dp"
        android:text="@string/saltar"
        android:textColor="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/siguiente"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descripcion" />
</androidx.constraintlayout.widget.ConstraintLayout>